programming is done

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,5 +30,8 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:29.0.0'
     implementation 'com.android.support:design:29.0.2'
     implementation 'com.android.support:support-v4:29.0.0'
+    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+    'com.squareup.picasso:picasso:2.71828'
 
 }
